2010-06-01  Sebastien Pouliot  <sebastien@ximian.com>

	* Helper.cs: Add a centralized (managed) IsUserInitiated so
	we'll be able to waive the requirement under SL4 elevated trust

2010-06-01  Alan McGovern  <amcgovern@novell.com>

	* NativeDependencyObjectHelper.cs: Add a missing case for
	  CompositeTransform

2010-05-28  Chris Toshok  <toshok@ximian.com>

	* Value.cs: track change to VideoFormat ctor and fieldnames.

2010-05-28  Chris Toshok  <toshok@ximian.com>

	* Events.cs: reuse existing event args for
	CaptureImageCompletedEvent and SendCompletedEvent.

2010-05-27  Chris Toshok  <toshok@ximian.com>

	* Events.cs: add dispatcher for
	EventHandler<CaptureImageCompletedEventArgs>

2010-05-26  Chris Toshok  <toshok@ximian.com>

	* Value.cs: correct field usage for Audio/VideoFormat classes.

	* Events.cs: add CreateSampleReadyEventArgsEventHandlerDispatcher
	and CreateVideoFormatChangedEventArgsEventHandlerDispatcher for
	the video capture stuff.

2010-05-26  Alan McGovern  <amcgovern@novell.com>

	* DoubleKeyedDictionary.cs: Sometimes we don't want to do the
	  sanity checks to make sure we don't have duplicates in the
	  ItemContainerGenerator dictionaries. It is legal to have one
	  item in multiple containers.

2010-05-25  Alan McGovern  <amcgovern@novell.com>

	* IListExtensions.cs: Add a handy 'AddRange' extension method
	  to IList<T>.

2010-05-25  Alan McGovern  <amcgovern@novell.com>

	* Helper.cs: Add some static "AreEqual" methods which do
	  reference and/or value equality testing as appropriate.

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* NativeMethods.cs: Update to HttpRequest API.

2010-05-24  Alan McGovern  <amcgovern@novell.com>

	* Value.cs:
	* ManagedXamlLoader.cs: We always store the correct type in
	  our Value*s instead of failing over to Type::MANAGED now.
	  GCHandles can be checked for with the new "GCHandleFlag"
	  flag in the padding field. This should clear up a lot of
	  warnings about incompatible types.
