@@ -1,3 +1,11 @@
+2010-06-02  Alan McGovern  <amcgovern@novell.com>
+
+	* MarkupExpressionParser.cs: Use case insensitive enum parsing
+	  for RelativeSource.
+
+	* MoonlightValueConverter.cs: Use case insensitive enum
+	  parsing here, it's the only place we don't.
+
 2010-06-01  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* Helper.cs: Add a centralized (managed) IsUserInitiated so
